genealogy-macros/tests/ui/public_field.rs
use genealogy_macros::record;

#[record]
struct Record {
	pub number: usize,
}

pub fn main() {}
